Fix ascension stats taking up multiple rows
If the window is small enough, ascension stats will take up multiple
rows at a certain point, which doesn't look great.
This commit fixes this, and adds a minimum 10px gap between stat
trackers in case the window is small enough that the stats are visually
too close together.

--- a/Synergism.css
+++ b/Synergism.css
@@ -2806,6 +2806,7 @@ header #obtainiumDisplay {
 
 #ascensionStats {
     display: flex;
+    gap: 10px;
     padding-top: 10px;
     margin-bottom: 15px;
     line-height: 20px;
@@ -2815,6 +2816,7 @@ header #obtainiumDisplay {
 
 #ascensionStats > span {
     display: flex;
+    white-space: pre;
     align-items: center;
 }
 
